tests/vertical-slice/accept/owned_nested_tuple_clone.hew
fn main() {
    let xs: Vec<((string, i64), bool)> = Vec::new();
    xs.push((("a", 1), true));
    xs.push((("b", 2), false));

    let ys = xs.clone();
    xs.set(0, (("zzz", 9), true));

    let first = ys.get(0);
    let second = ys.get(1);
    println(f"{ys.len()}:{(first.0).0}:{(first.0).1}:{first.1}:{(second.0).0}:{(second.0).1}:{second.1}");
}
