tests/vertical-slice/reject/hashmap_keys_managed_record.hew
fn main() {
    let values: HashMap<i64, Vec<i64>> = HashMap::new();
    let xs: Vec<i64> = Vec::new();
    xs.push(42);
    values.insert(1, xs);
    let projected = values.keys();
    println(projected.len());
}
